{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "8b25337f-9424-4a3d-9357-6328d3d6c215",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "ec30d2bc-34ae-4131-9efe-5901c3ec63f5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "ec4711c6-f32a-44ca-ae0c-b3063bce9815",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "8dc5bb5a-091e-4a8a-8979-613235ec2436",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnBack",
                    "type": "Button",
                    "id": "a3884841-85a1-4ec7-9f0b-6d1c3def6050",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchSwipe",
                    "type": "Value",
                    "id": "d0225f6f-f4ff-4346-9cb8-63396fe8e298",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eba68858-82c8-400a-9dac-99f48e710b42",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "714e4c52-08d9-47bf-95d1-3f85704179e0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09415683-5644-48d4-bcbd-25faa55f2e2b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "733e6ec4-a1dd-41a1-ba02-7ef8312e60eb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46da3167-04b4-4bdc-8f7e-fa40489fc46e",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchSwipe",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}